--- a/ganymede/pom.xml
+++ b/ganymede/pom.xml
@@ -38,6 +38,71 @@
       <groupId>ganymede</groupId>
       <artifactId>ganymede-kernel</artifactId>
       <version>${project.version}</version>
+      <scope>runtime</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>commons-logging</groupId>
+          <artifactId>commons-logging</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>log4j</groupId>
+          <artifactId>log4j</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <!-- Servlet Container -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-jetty</artifactId>
+      <scope>runtime</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>org.eclipse.jetty.websocket</groupId>
+          <artifactId>javax-websocket-server-impl</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.eclipse.jetty.websocket</groupId>
+          <artifactId>websocket-server</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <!-- Logging -->
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>jcl-over-slf4j</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+    <!-- Ganymede Runtime -->
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.spark-project.spark</groupId>
+      <artifactId>unused</artifactId>
+      <version>1.0.0</version>
+      <scope>runtime</scope>
     </dependency>
   </dependencies>
   <build>
@@ -95,22 +160,45 @@
         </executions>
         <configuration>
           <createDependencyReducedPom>true</createDependencyReducedPom>
+          <artifactSet>
+            <excludes>
+              <exclude>commons-logging:commons-logging</exclude>
+              <exclude>log4j:log4j</exclude>
+            </excludes>
+          </artifactSet>
           <filters>
             <filter>
+              <artifact>com.github.jknack:handlebars</artifact>
+              <excludes>
+                <exclude>META-INF/maven/org.apache.commons/commons-lang3/*</exclude>
+              </excludes>
+            </filter>
+            <filter>
+              <artifact>org.codehaus.groovy:groovy-*</artifact>
+              <excludes>
+                <exclude>META-INF/groovy-release-info.properties</exclude>
+              </excludes>
+            </filter>
+            <filter>
               <artifact>*:*</artifact>
-              <excludes>META-INF/*.SF</excludes>
-              <excludes>META-INF/*.DSA</excludes>
-              <excludes>META-INF/*.RSA</excludes>
-              <excludes>**/module-info.class</excludes>
+              <excludes>
+                <exclude>META-INF/*.DSA</exclude>
+                <exclude>META-INF/*.RSA</exclude>
+                <exclude>META-INF/*.SF</exclude>
+                <exclude>META-INF/DEPENDENCIES</exclude>
+                <exclude>META-INF/LICENSE.md</exclude>
+                <exclude>META-INF/NOTICE.md</exclude>
+                <exclude>META-INF/README.txt</exclude>
+                <exclude>META-INF/spring-configuration-metadata.json</exclude>
+                <exclude>META-INF/additional-spring-configuration-metadata.json</exclude>
+                <exclude>**/module-info.class</exclude>
+              </excludes>
             </filter>
           </filters>
           <transformers>
             <transformer implementation="org.apache.maven.plugins.shade.resource.ApacheLicenseResourceTransformer"/>
             <transformer implementation="org.apache.maven.plugins.shade.resource.ApacheNoticeResourceTransformer">
               <addHeader>false</addHeader>
-            </transformer>
-            <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
-              <resource>META-INF/DEPENDENCIES</resource>
             </transformer>
             <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
               <manifestEntries>
@@ -132,6 +220,9 @@
             </transformer>
             <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
               <resource>META-INF/spring.tooling</resource>
+            </transformer>
+            <transformer implementation="org.apache.maven.plugins.shade.resource.XmlAppendingTransformer">
+              <resource>META-INF/web-fragment.xml</resource>
             </transformer>
           </transformers>
         </configuration>
