--- a/ganymede/pom.xml
+++ b/ganymede/pom.xml
@@ -39,12 +39,6 @@
       <artifactId>ganymede-kernel</artifactId>
       <version>${project.version}</version>
       <scope>runtime</scope>
-      <exclusions>
-        <exclusion>
-          <groupId>commons-logging</groupId>
-          <artifactId>commons-logging</artifactId>
-        </exclusion>
-      </exclusions>
     </dependency>
     <!-- Servlet Container -->
     <dependency>
@@ -64,19 +58,20 @@
     </dependency>
     <!-- Logging -->
     <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>jcl-over-slf4j</artifactId>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
       <scope>runtime</scope>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-log4j12</artifactId>
+      <artifactId>jcl-over-slf4j</artifactId>
       <scope>runtime</scope>
     </dependency>
     <!-- Ganymede Runtime -->
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
+      <scope>runtime</scope>
     </dependency>
     <dependency>
       <groupId>mysql</groupId>
@@ -160,11 +155,6 @@
         </executions>
         <configuration>
           <createDependencyReducedPom>true</createDependencyReducedPom>
-          <artifactSet>
-            <excludes>
-              <exclude>commons-logging:commons-logging</exclude>
-            </excludes>
-          </artifactSet>
           <filters>
             <filter>
               <artifact>com.github.jknack:handlebars</artifact>
