--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,11 @@
         <version>${spark.version}</version>
       </dependency>
       <dependency>
+        <groupId>org.apache.hive</groupId>
+        <artifactId>hive-jdbc</artifactId>
+        <version>3.1.2</version>
+      </dependency>
+      <dependency>
         <groupId>org.apache.velocity</groupId>
         <artifactId>velocity-engine-scripting</artifactId>
         <version>2.3</version>
