Resolved some javax.* -> jakarta.* transitive dependencies. Updated spring-boot-dependencies version properties.

--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,8 @@
     <commonmark.version>0.18.0</commonmark.version>
     <graal-sdk.version>0.33</graal-sdk.version>
     <jackson-bom.version>2.10.5.20201202</jackson-bom.version>
+    <jetty.version>9.4.43.v20210629</jetty.version>
+    <postgresql.version>42.2.23</postgresql.version>
     <scala.binary.version>2.12</scala.binary.version>
     <scala.version>${scala.binary.version}.10</scala.version>
     <spark.version>3.1.2</spark.version>
