--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,9 @@
     <jse.target>11</jse.target>
     <maven.compiler.source>${jse.target}</maven.compiler.source>
 
+    <notebook.services.version>v6.4.0</notebook.services.version>
+    <notebook.services.spec>https://github.com/jupyter/notebook/raw/${notebook.services.version}/notebook/services/api/api.yaml</notebook.services.spec>
+
     <commonmark.version>0.18.0</commonmark.version>
     <graal-sdk.version>0.33</graal-sdk.version>
     <jackson-bom.version>2.10.5.20201202</jackson-bom.version>
@@ -136,6 +139,11 @@
         <version>${ball-util.version}</version>
       </dependency>
       <dependency>
+        <groupId>com.github.spotbugs</groupId>
+        <artifactId>spotbugs-annotations</artifactId>
+        <version>4.3.0</version>
+      </dependency>
+      <dependency>
         <groupId>com.github.jknack</groupId>
         <artifactId>handlebars</artifactId>
         <version>4.2.0</version>
@@ -144,6 +152,11 @@
         <groupId>info.picocli</groupId>
         <artifactId>picocli</artifactId>
         <version>4.6.1</version>
+      </dependency>
+      <dependency>
+        <groupId>io.swagger</groupId>
+        <artifactId>swagger-annotations</artifactId>
+        <version>1.6.2</version>
       </dependency>
       <dependency>
         <groupId>org.apache.spark</groupId>
@@ -265,6 +278,7 @@
   <modules>
     <module>ganymede</module>
     <module>ganymede-kernel</module>
+    <module>jupyter-client</module>
   </modules>
   <build>
     <pluginManagement>
@@ -508,6 +522,11 @@
             <serialwarn>true</serialwarn>
             <show>protected</show>
           </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.openapitools</groupId>
+	  <artifactId>openapi-generator-maven-plugin</artifactId>
+	  <version>5.2.0</version>
         </plugin>
       </plugins>
     </pluginManagement>
