--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,11 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
+      <groupId>ganymede</groupId>
+      <artifactId>jupyter-client</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
       <groupId>ball</groupId>
       <artifactId>ball-util</artifactId>
     </dependency>
