--- a/ganymede-kernel/pom.xml
+++ b/ganymede-kernel/pom.xml
@@ -42,6 +42,7 @@
     <dependency>
       <groupId>ball</groupId>
       <artifactId>ball-util</artifactId>
+      <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.dataformat</groupId>
