--- a/jupyter-client/pom.xml
+++ b/jupyter-client/pom.xml
@@ -51,6 +51,7 @@
     <dependency>
       <groupId>ball</groupId>
       <artifactId>ball-util</artifactId>
+      <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
