--- a/ganymede-kernel/pom.xml
+++ b/ganymede-kernel/pom.xml
@@ -33,7 +33,15 @@
     <version>2.0.0-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
+  <properties>
+    <ganymede.server.package>ganymede.kernel</ganymede.server.package>
+  </properties>
   <dependencies verbose="true">
+    <dependency>
+      <groupId>ganymede</groupId>
+      <artifactId>ganymede-client</artifactId>
+      <version>${project.version}</version>
+    </dependency>
     <dependency>
       <groupId>ganymede</groupId>
       <artifactId>jupyter-client</artifactId>
@@ -65,6 +73,10 @@
     <dependency>
       <groupId>info.picocli</groupId>
       <artifactId>picocli</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-swagger2</artifactId>
     </dependency>
     <dependency>
       <groupId>jakarta.annotation</groupId>
@@ -276,4 +288,65 @@
       <artifactId>tablesaw-jsplot</artifactId>
     </dependency>
   </dependencies>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>ganymede-rest-protocol.yml</id>
+            <phase>generate-resources</phase>
+            <goals>
+              <goal>unpack</goal>
+            </goals>
+            <configuration>
+              <artifactItems>
+                <artifactItem>
+                  <groupId>ganymede</groupId>
+                  <artifactId>ganymede-client</artifactId>
+                  <version>${project.version}</version>
+                  <type>jar</type>
+                </artifactItem>
+              </artifactItems>
+              <includes>ganymede-rest-protocol.yml</includes>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.openapitools</groupId>
+	<artifactId>openapi-generator-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <phase>process-resources</phase>
+            <goals>
+              <goal>generate</goal>
+            </goals>
+            <configuration>
+              <inputSpec>${project.build.directory}/dependency/ganymede-rest-protocol.yml</inputSpec>
+              <generatorName>spring</generatorName>
+              <library>spring-boot</library>
+              <importMappings>
+                <importMapping>JsonNode=com.fasterxml.jackson.databind.node.ObjectNode</importMapping>
+              </importMappings>
+              <configOptions>
+                <dateLibrary>java8</dateLibrary>
+                <hideGenerationTimestamp>true</hideGenerationTimestamp>
+                <interfaceOnly>true</interfaceOnly>
+                <openApiNullable>false</openApiNullable>
+                <invokerPackage>${ganymede.server.package}</invokerPackage>
+                <apiPackage>${ganymede.server.package}</apiPackage>
+                <modelPackage>${ganymede.server.package}</modelPackage>
+                <supportingFilesToGenerate>ApiUtil.java</supportingFilesToGenerate>
+                <configOptions>
+                  <delegatePattern>true</delegatePattern>
+                </configOptions>
+              </configOptions>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 </project>
