Jetty 10.x and io.springfox:springfox-swagger2:3.0.0.

--- a/ganymede-kernel/pom.xml
+++ b/ganymede-kernel/pom.xml
@@ -41,6 +41,13 @@
       <groupId>ganymede</groupId>
       <artifactId>ganymede-client</artifactId>
       <version>${project.version}</version>
+      <exclusions>
+        <!-- Integrated in org.apache.velocity:velocity-engine-core -->
+        <exclusion>
+          <groupId>commons-io</groupId>
+          <artifactId>commons-io</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>ganymede</groupId>
