--- a/pom.xml
+++ b/pom.xml
@@ -111,7 +111,7 @@
     <graal-sdk.version>0.33</graal-sdk.version>
     <jackson-bom.version>2.10.5.20201202</jackson-bom.version>
     <jeromq.version>0.5.2</jeromq.version>
-    <jetty.version>9.4.43.v20210629</jetty.version>
+    <jetty.version>10.0.6</jetty.version>
     <kotlin.version>1.5.21</kotlin.version>
     <kotlin-coroutines.version>1.5.1</kotlin-coroutines.version>
     <postgresql.version>42.2.23</postgresql.version>
@@ -156,7 +156,7 @@
       <dependency>
         <groupId>io.springfox</groupId>
         <artifactId>springfox-swagger2</artifactId>
-        <version>2.9.2</version>
+        <version>3.0.0</version>
       </dependency>
       <dependency>
         <groupId>io.swagger</groupId>
