Added Java SE 11 & JDK 11 to Jupyter Notebook Help menu.

--- a/ganymede-kernel/src/main/resources/ganymede/kernel/kernel_info_reply.yml
+++ b/ganymede-kernel/src/main/resources/ganymede/kernel/kernel_info_reply.yml
@@ -16,3 +16,5 @@ content:
       url: "https://github.com/allen-ball/ganymede"
     - text: "Ganymede API Javadoc"
       url: "https://allen-ball.github.io/ganymede/index.html?overview-summary.html"
+    - text: "Java SE 11 & JDK 11"
+      url: "https://docs.oracle.com/en/java/javase/11/docs/api/"
