Quote info.version in ganymede-rest-protocol.yml.
Include ganymede-rest-protocol.yml in the respective Javadoc package
descriptions.

--- a/ganymede-client/src/main/resources/ganymede-rest-protocol.yml
+++ b/ganymede-client/src/main/resources/ganymede-rest-protocol.yml
@@ -4,7 +4,7 @@ openapi: "3.0.0"
 info:
   title: Ganymede Kernel Rest Protocol
   description: Ganymede Kernel Rest Protocol
-  version: @project.majorVersion@.@project.minorVersion@.@project.incrementalVersion@
+  version: "@project.majorVersion@.@project.minorVersion@.@project.incrementalVersion@"
 servers:
   - url: http://localhost/
 paths:
