openapi-generator-maven-plugin: Do not generate documentation or test sources.

--- a/pom.xml
+++ b/pom.xml
@@ -542,6 +542,12 @@
           <groupId>org.openapitools</groupId>
 	  <artifactId>openapi-generator-maven-plugin</artifactId>
 	  <version>${openapi-generator-maven-plugin.version}</version>
+          <configuration>
+            <generateApiDocumentation>false</generateApiDocumentation>
+            <generateApiTests>false</generateApiTests>
+            <generateModelDocumentation>false</generateModelDocumentation>
+            <generateModelTests>false</generateModelTests>
+          </configuration>
         </plugin>
       </plugins>
     </pluginManagement>
