--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
   <parent>
     <groupId>ball</groupId>
     <artifactId>parent</artifactId>
-    <version>20210722.0</version>
+    <version>20210722.1</version>
     <relativePath/>
   </parent>
   <organization>
@@ -129,10 +129,6 @@
     <tablesaw.version>0.38.3</tablesaw.version>
 
     <ball-api.version>${ball-parent.version}</ball-api.version>
-    <javadoc-offline-locations>${settings.localRepository}/javadoc-offline-locations</javadoc-offline-locations>
-    <javadoc.io>https://javadoc.io/doc/</javadoc.io>
-    <jeromq.apidocs>${javadoc.io}org.zeromq/jeromq/</jeromq.apidocs>
-    <spdx.apidocs>${javadoc.io}org.spdx/spdx-tools/</spdx.apidocs>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -322,217 +318,131 @@
           </configuration>
         </plugin>
         <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-dependency-plugin</artifactId>
+          <groupId>ball</groupId>
+          <artifactId>ball-javadoc-maven-plugin</artifactId>
           <executions>
             <execution>
-              <id>javadoc-offline-locations</id>
-              <phase>generate-sources</phase>
               <goals>
-                <goal>unpack-dependencies</goal>
+                <goal>generate-options-file</goal>
               </goals>
-              <configuration>
-                <classifier>javadoc</classifier>
-                <failOnMissingClassifierArtifact>false</failOnMissingClassifierArtifact>
-                <includes>package*-list,element*-list</includes>
-                <outputDirectory>${javadoc-offline-locations}</outputDirectory>
-                <stripClassifier>true</stripClassifier>
-                <stripVersion>true</stripVersion>
-                <useSubDirectoryPerArtifact>true</useSubDirectoryPerArtifact>
-              </configuration>
             </execution>
           </executions>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-antrun-plugin</artifactId>
-          <executions>
-            <execution>
-              <id>javadoc-offline-locations</id>
-              <phase>generate-sources</phase>
-              <goals>
-                <goal>run</goal>
-              </goals>
-              <configuration>
-                <target>
-                  <copy filtering="false" preservelastmodified="true"
-                        todir="${javadoc-offline-locations}">
-                    <fileset dir="${javadoc-offline-locations}"/>
-                    <regexpmapper from="^(.*/)?element-list$"
-                                  to="\1/package-list"/>
-                  </copy>
-                  <copy filtering="false" preservelastmodified="true"
-                        todir="${javadoc-offline-locations}">
-                    <fileset dir="${javadoc-offline-locations}"/>
-                    <regexpmapper from="^(.*/)?package-list$"
-                                  to="\1/element-list"/>
-                  </copy>
-                </target>
-              </configuration>
-            </execution>
-          </executions>
+          <configuration>
+            <links>
+              <link>
+                <artifact>com.fasterxml.jackson.core</artifact>
+                <url>https://fasterxml.github.io/{a}/javadoc/${jackson.major.version}/</url>
+              </link>
+              <link>
+                <artifact>info.picocli:picocli</artifact>
+                <url>https://picocli.info/apidocs/</url>
+              </link>
+              <link>
+                <artifact>javax.*</artifact>
+                <url>https://javaee.github.io/javaee-spec/javadocs/</url>
+              </link>
+              <link>
+                <artifact>org.apache.maven:*</artifact>
+                <url>https://maven.apache.org/ref/${maven.version}/apidocs/</url>
+              </link>
+              <link>
+                <artifact>commons-*</artifact>
+                <url>https://commons.apache.org/proper/{a}/apidocs/</url>
+              </link>
+              <link>
+                <artifact>org.apache.spark:*</artifact>
+                <url>https://spark.apache.org/docs/latest/api/java/</url>
+              </link>
+              <link>
+                <artifact>org.freemarker:*</artifact>
+                <url>https://freemarker.apache.org/docs/api/</url>
+              </link>
+              <link>
+                <artifact>org.jfree:*</artifact>
+                <url>https://www.jfree.org/jfreechart/api/javadoc/</url>
+              </link>
+              <link>
+                <artifact>org.knowm.xchart:*</artifact>
+                <url>https://knowm.org/javadocs/xchart/</url>
+              </link>
+              <link>
+                <artifact>org.springframework</artifact>
+                <url>https://docs.spring.io/spring-framework/docs/${spring-framework.version}/javadoc-api/</url>
+              </link>
+              <link>
+                <artifact>org.springframework.boot</artifact>
+                <url>https://docs.spring.io/spring-boot/docs/${spring-boot.version}/api/</url>
+              </link>
+              <link>
+                <artifact>org.springframework.data</artifact>
+                <url>https://docs.spring.io/spring-data/commons/docs/current/api/</url>
+              </link>
+              <link>
+                <artifact>org.springframework.data:spring-data-jpa</artifact>
+                <url>https://docs.spring.io/spring-data/jpa/docs/current/api/</url>
+              </link>
+              <link>
+                <artifact>org.springframework.security</artifact>
+                <url>https://docs.spring.io/spring-security/site/docs/${spring-security.version}/api/</url>
+              </link>
+            </links>
+            <offlinelinks>
+              <offlinelink>
+                <artifact>
+                  com.github.jknack:*
+                  org.apache.httpcomponents:*
+                  org.apache.maven.resolver:*
+                  org.apache.velocity:*
+                  org.commonmark:*
+                  org.thymeleaf.extras:thymeleaf-extras-java8time
+                  org.zeromq:jeromq
+                  tech.tablesaw:*
+                </artifact>
+                <url>https://javadoc.io/doc/{g}/{a}/latest/</url>
+              </offlinelink>
+              <offlinelink>
+                <artifact>
+                  com.fasterxml.jackson.dataformat:*
+                  com.fasterxml.jackson.datatype:*
+                  com.fasterxml.jackson.jaxrs:*
+                  com.fasterxml.jackson.module:*
+                </artifact>
+                <url>https://javadoc.io/doc/{g}/{a}/{v}/</url>
+              </offlinelink>
+              <offlinelink>
+                <artifact>org.apache.maven:*</artifact>
+                <url>https://maven.apache.org/ref/${maven.version}/{a}/apidocs/</url>
+              </offlinelink>
+              <offlinelink>
+                <artifact>org.codehaus.groovy:*</artifact>
+                <url>https://javadoc.io/doc/{g}/groovy-all/latest/</url>
+              </offlinelink>
+              <offlinelink>
+                <artifact>org.jooq:*</artifact>
+                <url>https://www.jooq.org/javadoc/latest/</url>
+              </offlinelink>
+              <offlineLink>
+                <artifact>org.thymeleaf:*</artifact>
+                <url>https://www.thymeleaf.org/apidocs/{a}/${thymeleaf.version}/</url>
+              </offlineLink>
+            </offlinelinks>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-javadoc-plugin</artifactId>
           <configuration>
-            <detectLinks>true</detectLinks>
+            <additionalJOptions>
+              <additionalJOption>@${project.build.directory}/javadoc-options/options</additionalJOption>
+            </additionalJOptions>
             <detectOfflineLinks>true</detectOfflineLinks>
             <keywords>true</keywords>
             <doclint>none</doclint>
             <links>
               <link>https://allen-ball.github.io/javadoc/ball-api/${ball-api.version}/</link>
-              <!-- Java EE 8 -->
-              <link>https://javaee.github.io/javaee-spec/javadocs/</link>
-              <!-- Apache Commons -->
-              <link>https://commons.apache.org/proper/commons-io/apidocs/</link>
-              <link>https://commons.apache.org/proper/commons-lang/apidocs/</link>
-              <!-- Apache FreeMarker -->
-              <link>https://freemarker.apache.org/docs/api/</link>
-              <!-- Apache Spark -->
-              <link>https://spark.apache.org/docs/latest/api/java/</link>
-              <!-- Jackson -->
-              <link>https://fasterxml.github.io/jackson-annotations/javadoc/${jackson.major.version}/</link>
-              <link>https://fasterxml.github.io/jackson-core/javadoc/${jackson.major.version}/</link>
-              <link>https://fasterxml.github.io/jackson-databind/javadoc/${jackson.major.version}/</link>
-              <!-- JeroMQ -->
-              <link>${jeromq.apidocs}jeromq/latest/</link>
-              <!-- JFreeChart -->
-              <link>https://www.jfree.org/jfreechart/api/javadoc/</link>
-              <!-- picocli -->
-              <link>https://picocli.info/apidocs/</link>
-              <!-- Spring -->
-              <link>https://docs.spring.io/spring/docs/${spring-framework.version}/javadoc-api/</link>
-              <link>https://docs.spring.io/spring-boot/docs/${spring-boot.version}/api/</link>
-              <link>https://docs.spring.io/spring-boot/docs/${spring-boot.version}/gradle-plugin/api/</link>
-              <link>https://docs.spring.io/spring-data/commons/docs/current/api/</link>
-              <link>https://docs.spring.io/spring-data/jpa/docs/current/api/</link>
-              <link>https://docs.spring.io/spring-security/site/docs/${spring-security.version}/api/</link>
-              <!-- XChart -->
-              <link>https://knowm.org/javadocs/xchart/</link>
             </links>
             <linksource>true</linksource>
             <locale>en_US</locale>
-            <offlineLinks>
-              <!-- Apache Ant -->
-              <offlineLink>
-                <url>${javadoc.io}org.apache.ant/ant/latest/</url>
-                <location>${javadoc-offline-locations}/ant-javadoc-jar/</location>
-              </offlineLink>
-              <!-- Apache HttpComponents -->
-              <offlineLink>
-                <url>${javadoc.io}org.apache.httpcomponents/httpclient/latest/</url>
-                <location>${javadoc-offline-locations}/httpclient-javadoc-jar/</location>
-              </offlineLink>
-              <offlineLink>
-                <url>${javadoc.io}org.apache.httpcomponents/httpcore/latest/</url>
-                <location>${javadoc-offline-locations}/httpcore-javadoc-jar/</location>
-              </offlineLink>
-              <!-- Apache Maven -->
-              <offlineLink>
-                <url>https://maven.apache.org/ref/${maven.version}/maven-artifact/apidocs/</url>
-                <location>${javadoc-offline-locations}/maven-artifact-javadoc-jar/</location>
-              </offlineLink>
-              <!-- Apache Maven Artifact Resolver -->
-              <offlineLink>
-                <url>${javadoc.io}org.apache.maven.resolver/maven-resolver-api/latest/</url>
-                <location>${javadoc-offline-locations}/maven-resolver-api-javadoc-jar/</location>
-              </offlineLink>
-              <!-- Apache Velocity -->
-              <offlineLink>
-                <url>${javadoc.io}org.apache.velocity/velocity-engine-core/latest/</url>
-                <location>${javadoc-offline-locations}/velocity-engine-core-javadoc-jar/</location>
-              </offlineLink>
-              <offlineLink>
-                <url>${javadoc.io}org.apache.velocity/velocity-engine-scripting/latest/</url>
-                <location>${javadoc-offline-locations}/velocity-engine-scripting-javadoc-jar/</location>
-              </offlineLink>
-              <!-- Commonmark -->
-              <offlineLink>
-                <url>${javadoc.io}org.commonmark/commonmark/latest/</url>
-                <location>${javadoc-offline-locations}/commonmark-javadoc-jar/</location>
-              </offlineLink>
-              <offlineLink>
-                <url>${javadoc.io}org.commonmark/commonmark-ext-autourl/latest/</url>
-                <location>${javadoc-offline-locations}/commonmark-ext-autolink-javadoc-jar/</location>
-              </offlineLink>
-              <offlineLink>
-                <url>${javadoc.io}org.commonmark/commonmark-ext-gfm-strikethrough/latest/</url>
-                <location>${javadoc-offline-locations}/commonmark-ext-gfm-strikethrough-javadoc-jar/</location>
-              </offlineLink>
-              <offlineLink>
-                <url>${javadoc.io}org.commonmark/commonmark-ext-gfm-tables/latest/</url>
-                <location>${javadoc-offline-locations}/commonmark-ext-gfm-tables-javadoc-jar/</location>
-              </offlineLink>
-              <offlineLink>
-                <url>${javadoc.io}org.commonmark/commonmark-ext-heading-anchor/latest/</url>
-                <location>${javadoc-offline-locations}/commonmark-ext-heading-anchor-javadoc-jar/</location>
-              </offlineLink>
-              <offlineLink>
-                <url>${javadoc.io}org.commonmark/commonmark-ext-image-attributes/latest/</url>
-                <location>${javadoc-offline-locations}/commonmark-ext-image-attributes-javadoc-jar/</location>
-              </offlineLink>
-              <offlineLink>
-                <url>${javadoc.io}org.commonmark/commonmark-ext-ins/latest/</url>
-                <location>${javadoc-offline-locations}/commonmark-ext-ins-javadoc-jar/</location>
-              </offlineLink>
-              <offlineLink>
-                <url>${javadoc.io}org.commonmark/commonmark-ext-task-list-items/latest/</url>
-                <location>${javadoc-offline-locations}/commonmark-ext-task-list-items-javadoc-jar/</location>
-              </offlineLink>
-              <offlineLink>
-                <url>${javadoc.io}org.commonmark/commonmark-ext-yaml-front-matter/latest/</url>
-                <location>${javadoc-offline-locations}/commonmark-ext-yaml-front-matter-javadoc-jar/</location>
-              </offlineLink>
-              <!-- Groovy -->
-              <offlineLink>
-                <url>${javadoc.io}org.codehaus.groovy/groovy-all/latest/</url>
-                <location>${javadoc-offline-locations}/groovy-javadoc-jar/</location>
-              </offlineLink>
-              <offlineLink>
-                <url>${javadoc.io}org.codehaus.groovy/groovy-all/latest/</url>
-                <location>${javadoc-offline-locations}/groovy-jsr223-javadoc-jar/</location>
-              </offlineLink>
-              <!-- Handlebars -->
-              <offlineLink>
-                <url>${javadoc.io}com.github.jknack/handlebars/latest/</url>
-                <location>${javadoc-offline-locations}/handlebars-javadoc-jar/</location>
-              </offlineLink>
-              <!-- jOOQ -->
-              <offlineLink>
-                <url>https://www.jooq.org/javadoc/latest/</url>
-                <location>${javadoc-offline-locations}/jooq-javadoc-jar/</location>
-              </offlineLink>
-              <!-- Scala -->
-<!--
-              <offlineLink>
-                <url>${javadoc.io}org.scala-lang/scala-compiler/latest/</url>
-                <location>${javadoc-offline-locations}/scala-compiler-javadoc-jar</location>
-              </offlineLink>
-              <offlineLink>
-                <url>${javadoc.io}org.scala-lang/scala-library/latest/</url>
-                <location>${javadoc-offline-locations}/scala-library-javadoc-jar</location>
-              </offlineLink>
--->
-              <!-- Tablesaw -->
-              <offlineLink>
-                <url>${javadoc.io}tech.tablesaw/tablesaw-core/latest/</url>
-                <location>${javadoc-offline-locations}/tablesaw-core-javadoc-jar/</location>
-              </offlineLink>
-              <offlineLink>
-                <url>${javadoc.io}tech.tablesaw/tablesaw-jsplot/latest/</url>
-                <location>${javadoc-offline-locations}/tablesaw-jsplot-javadoc-jar/</location>
-              </offlineLink>
-              <!-- Thymeleaf -->
-              <offlineLink>
-                <url>https://www.thymeleaf.org/apidocs/thymeleaf/${thymeleaf.version}/</url>
-                <location>${javadoc-offline-locations}/thymeleaf-javadoc-jar/</location>
-              </offlineLink>
-              <offlineLink>
-                <url>${javadoc.io}org.thymeleaf.extras/thymeleaf-extras-java8time/latest/</url>
-                <location>${javadoc-offline-locations}/thymeleaf-extras-java8time-javadoc-jar/</location>
-              </offlineLink>
-            </offlineLinks>
             <quiet>true</quiet>
             <serialwarn>true</serialwarn>
             <show>protected</show>
