--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,13 @@
       <plugin>
         <groupId>ball</groupId>
         <artifactId>ball-javadoc-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>generate-options-file</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
