--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
   <parent>
     <groupId>ball</groupId>
     <artifactId>parent</artifactId>
-    <version>20210803-SNAPSHOT</version>
+    <version>20210820.0</version>
     <relativePath/>
   </parent>
   <organization>
@@ -109,13 +109,18 @@
 
     <commonmark.version>0.18.0</commonmark.version>
     <graal-sdk.version>0.33</graal-sdk.version>
+    <groovy.version>3.0.9</groovy.version>
+    <gson.version>2.8.8</gson.version>
     <jackson-bom.version>2.10.5.20201202</jackson-bom.version>
     <jeromq.version>0.5.2</jeromq.version>
+    <jersey.version>2.35</jersey.version>
     <jetty.version>10.0.6</jetty.version>
+    <kotlin.version>1.5.30</kotlin.version>
+    <kotlin-coroutines.version>1.5.2</kotlin-coroutines.version>
     <scala.binary.version>2.12</scala.binary.version>
     <scala.version>${scala.binary.version}.10</scala.version>
     <spark.version>3.1.2</spark.version>
-    <tablesaw.version>0.38.3</tablesaw.version>
+    <tablesaw.version>0.38.5</tablesaw.version>
 
     <ball-api.version>${ball-parent.version}</ball-api.version>
   </properties>
@@ -224,7 +229,7 @@
       <dependency>
         <groupId>org.knowm.xchart</groupId>
         <artifactId>xchart</artifactId>
-        <version>3.8.0</version>
+        <version>3.8.1</version>
       </dependency>
       <dependency>
         <groupId>org.scala-lang</groupId>
