--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,10 @@
     <jetty.version>10.0.6</jetty.version>
     <kotlin.version>1.5.30</kotlin.version>
     <kotlin-coroutines.version>1.5.2</kotlin-coroutines.version>
+    <logback.version>1.2.6</logback.version>
+    <netty.version>${netty.major.version}.68.Final</netty.version>
+    <netty-tcnative.version>2.0.42.Final</netty-tcnative.version>
+    <resolverVersion>1.7.2</resolverVersion>
     <scala.binary.version>2.12</scala.binary.version>
     <scala.version>${scala.binary.version}.10</scala.version>
     <spark.version>3.1.2</spark.version>
